# FEICE

./: CMakeLists.txt  README.md  main.cpp
ARCTIC_GRIDGEN/GRIDGEN/: CMakeLists.txt  config.txt  main.cpp
Advection/: CMakeLists.txt
Configuration/: CMakeLists.txt  advection_config.cpp  air_forcing_config.cpp  config.cpp  dynamics_test_config.cpp  ice_forcing_config.cpp  mesh_config.cpp  model_config.cpp  momentum_config.cpp  output_config.cpp  water_forcing_config.cpp
DynamicsTest/: CMakeLists.txt
Forcing/: CMakeLists.txt  air_forcing.cpp  coords_transformation.cpp  forcing_interpolation.cpp  ice_forcing.cpp  water_forcing.cpp
Headers/: CMakeLists.txt  INMOST_ICE.h  air_forcing.h  config.h  coords_rotation.h  coords_transformation.h  dynamics_test.h  enum_classes.h  external.h  forcing_interpolation.h  ice_forcing.h  mesh.h  water_forcing.h
Mesh/: CMakeLists.txt  interpolation2d.cpp  mesh.cpp
Momentum/: CMakeLists.txt  momentum.cpp
SQUARE_GRIDGEN/TRIANGULATION/: mesh  square.txt
SQUARE_GRIDGEN/TRIANGULATION/output/: bnd.txt  tri.txt  vrt.txt
Service/: CMakeLists.txt
configs/config_arctic/: air_forcing_config.json  ice_forcing_config.json  mesh_config.json  output_config.json  water_forcing_config.json
configs/config_square/: config.json  output_config.json
run/run_arctic/: config.json  launcher.qs
